--- a/theme/default/styles.css
+++ b/theme/default/styles.css
@@ -3,7 +3,7 @@
  * @license https://www.gnu.org/licenses/gpl-3.0.en.html GPLv3
  * @author Jonathan Coulet <j.coulet@gmail.com>
  * @author Maxence Cauderlier <mx.koder@gmail.com>
- * @author Frédéric Kaplon <frederic.kaplon@me.com>
+ * @author FrÃ©dÃ©ric Kaplon <frederic.kaplon@me.com>
  * @author Florent Fortat <florent.fortat@maxgun.fr>
  * @author ShevAbam <me@shevarezo.fr>
  * 
@@ -183,6 +183,7 @@ input[type=submit], input[type=button], button, .button, [type="file"]::file-sel
     border-radius: var(--section-radius);
     transition: background-color 0.5s ease;
     border: 1px solid rgba(0,0,0, 0.1);
+    display: inline-block;
 }
 
 input[type=submit]:hover, input[type=button]:hover, button:hover, .button:hover, [type="file"]::file-selector-button:hover{
